--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -1,9 +1,22 @@
 name: Reusable workflow file
-on: workflow_call
-
+on: 
+  workflow_call:
+    inputs: #ye waala is for input jo ki ayega from mail workflow file
+      artifact-ka-name: #apne mann se rkha hua naam hai for artifact ka naam jo ayega mail file se
+        description: Artifact ka naam 
+        required: true #agar ye input nahi mila to poora workflow fail ho jayega(for true and opposite for false)
+        default: dist #agar koi value nahi ayega to ye walaa name use ho jayega
+        type: string
+        
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Getting the atrfact from the mail workflow #trying to fetch 
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact-ka-name }}
+      - name: Listing the artifact name that we got from the step above
+        run: ls
       - name: Output info
         run: echo "This is from Reusable workflow file"
