--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -31,4 +31,4 @@ jobs:
         run: echo "This is from Reusable workflow file"
       - name: Set result output
         id: step-output-id #id bana diya taaki job level pr araam se reference ho sake
-        run: echo "step-ke-andar-ka-result=success" >> $GITHUB_OUTPUT #but isko jobs ke bahar bejhne ke liye pehle isko jobs tk bejhna hai as abhi ye sirf step tk hi simit hai
+        run: echo "step-ke-andar-ka-result="kya haal chaal bidu"" >> $GITHUB_OUTPUT #but isko jobs ke bahar bejhne ke liye pehle isko jobs tk bejhna hai as abhi ye sirf step tk hi simit hai
