--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -1,4 +1,4 @@
-#################   ReUsable file below   ############################
+#----------------------------------   ReUsable file below ------------------------------
 name: Reusable workflow file
 on: 
   workflow_call:
